#./TestProject/CMakeLists.txt

set(TEST_SOURCES
	ArtilleryBug.cpp
	ArtilleryBug.h
	ArtilleryWeapon.cpp
	ArtilleryWeapon.h
	BetterBrain.cpp
	BetterBrain.h
	Brambles.cpp
	Brambles.h
	CBone.cpp
	CBone.h
	CJoint.cpp
	CJoint.h
	CMakeLists.txt
	ConverterWhiz.cpp
	ConverterWhiz.h
	CrabBug.cpp
	CrabBug.h
	CrabWeapon.cpp
	CrabWeapon.h
	Credits.cpp
	Credits.h
	Damage.cpp
	Damage.h
	DefaultWeapon.cpp
	DefaultWeapon.h
	Dood.cpp
	Dood.h
	DynamicBrain.h
	ExperimentalScreen.cpp
	ExperimentalScreen.h
	GAExperiment.cpp
	GAExperiment.h
	GhostCamera.cpp
	GhostCamera.h
	Gun.cpp
	Gun.h
	HUD.cpp
	HUD.h
	InstructionsScreen.cpp
	InstructionsScreen.h
	JetpackNozzle.cpp
	JetpackNozzle.h
	LevelLoad.cpp
	LevelLoad.h
	LoadingScreen.cpp
	LoadingScreen.h
	Main.cpp
	MainMenu.cpp
	MainMenu.h
	MultiLayerBrain.cpp
	MultiLayerBrain.h
	NeuralNet.cpp
	NeuralNet.h
	Particle.cpp
	Particle.h
	Pendulum.cpp
	Pendulum.h
	PoseAimingGun.cpp
	PoseAimingGun.h
	RocketBug.cpp
	RocketBug.h
	Rubbish.cpp
	Rubbish.h
	ScaledIOBrain.cpp
	ScaledIOBrain.h
	Shootable.h
	Shot.cpp
	Shot.h
	Soldier.cpp
	Soldier.h
	Spark.cpp
	Spark.h
	StaticLevelGeometry.cpp
	StaticLevelGeometry.h
	StdAfx.cpp
	StdAfx.h
	Sun.cpp
	Sun.h
	Team.cpp
	Team.h
	TestGame.cpp
	TestGame.h
	TestScreen.cpp
	TestScreen.h
	Tripod.cpp
	Tripod.h
	WalkPose.cpp
	WalkPose.h
	Weapon.cpp
	Weapon.h
	WeaponEquip.cpp
	WeaponEquip.h
	WeaponIntrinsic.cpp
	WeaponIntrinsic.h
	WorldBoundary.cpp
	WorldBoundary.h
)
## Add target
add_executable(TestProject ${TEST_SOURCES})

target_include_directories(TestProject PUBLIC CibraryEngine)
target_link_libraries(TestProject PUBLIC CibraryEngine)